src/process/build/log/idf_py_stderr_output_186785
In file included from /home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:1:
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c: In function 'app_main':
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:221:40: error: 'array' undeclared (first use in this function); did you mean 'arr'?
  221 |              ESP_LOGI(TAG, "Data: %x", array[i]);
      |                                        ^~~~~
/home/daniel/esp-idf/components/log/include/esp_log.h:410:137: note: in definition of macro 'ESP_LOG_LEVEL'
  410 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/daniel/esp-idf/components/log/include/esp_log.h:342:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  342 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:221:14: note: in expansion of macro 'ESP_LOGI'
  221 |              ESP_LOGI(TAG, "Data: %x", array[i]);
      |              ^~~~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:221:40: note: each undeclared identifier is reported only once for each function it appears in
  221 |              ESP_LOGI(TAG, "Data: %x", array[i]);
      |                                        ^~~~~
/home/daniel/esp-idf/components/log/include/esp_log.h:410:137: note: in definition of macro 'ESP_LOG_LEVEL'
  410 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/daniel/esp-idf/components/log/include/esp_log.h:342:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  342 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:221:14: note: in expansion of macro 'ESP_LOGI'
  221 |              ESP_LOGI(TAG, "Data: %x", array[i]);
      |              ^~~~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:212:17: warning: unused variable 'arr' [-Wunused-variable]
  212 |         uint8_t arr = *rgb;
      |                 ^~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4739: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
